--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@project-serum/anchor": "^0.22.1",
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.4",
+    "@solana/wallet-adapter-material-ui": "^0.16.4",
+    "@solana/wallet-adapter-react": "^0.15.3",
+    "@solana/wallet-adapter-react-ui": "^0.9.5",
+    "@solana/wallet-adapter-wallets": "^0.15.5",
+    "@solana/web3.js": "^1.36.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,18 +23,26 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.26.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
     "http-proxy-middleware": "^2.0.1",
+    "parcel": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "shx": "^0.3.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "clean": "shx rm -rf dist .parcel-cache",
+    "build": "yarn clean && cross-env CI=true parcel build src/index.html",
+    "start": "yarn clean && cross-env CI=true parcel src/index.html",
+    "fmt": "prettier --write '{*,**/*}.{js,ts,jsx,tsx,json}'",
+    "lint": "eslint . && prettier --check '{*,**/*}.{js,ts,jsx,tsx,json}'",
+    "lint:fix": "eslint --fix . && yarn fmt",
+    "nuke": "shx rm -rf node_modules yarn.lock"
   },
   "eslintConfig": {
     "extends": [
