--- a/api/src/config/config.json
+++ b/api/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "1",
-    "database": "database_development",
+    "database": "express-react-template",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
