--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "",
   "main": "api/dist/index.js",
   "engines": {
-    "node": "12.22.5"
+    "node": "v16.10.0",
+    "npm": "7.24.0"
   },
   "scripts": {
-    "install-all": "npm install && npm install --prefix client",
+    "install-all": "npm-run-all install:backend install:frontend",
+    "install:backend": "npm install",
+    "install:frontend": "cd client && yarn",
     "start": "node ./api/dist/index.js",
     "migrate:db": "cd api/src && sequelize db:migrate --env production --url $DATABASE_URL && cd ../..",
-    "server": "nodemon --ignore tmpwrite --inspect ./api/dist/index.js",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"tsc -w\" \"npm run server\" \"npm run client\"",
+    "server": "nodemon --ignore nodemon_ignore --inspect ./api/dist/index.js",
+    "client": "cd client && yarn start",
+    "clean:api": "shx rm -rf api/dist",
+    "clean:client": "shx rm -rf client/dist client/.parcel-cache",
+    "dev": "npm-run-all clean:api clean:client dev:run",
+    "dev:run": "concurrently \"tsc -w\" \"npm run server\" \"npm run client\"",
     "clean-modules": "shx rm -rf node_modules",
     "clean": "shx rm -rf api/dist",
+    "build": "npm-run-all install-tsc migrate:db tsc build:client",
+    "build:client": "cd client && cross-env yarn clean && cross-env CI=true npx parcel build src/index.html",
     "tsc": "tsc",
-    "build": "npm-run-all install-tsc migrate:db tsc",
     "install-tsc": "npm install -g typescript",
-    "heroku-postbuild": "npm-run-all install-tsc migrate:db tsc solspin-install solspin-build solspin-clean-modules clean-modules"
+    "heroku-postbuild": "npm-run-all install-tsc migrate:db tsc install-all build"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +38,7 @@
     "@types/bs58": "^4.0.1",
     "@types/cors": "^2.8.12",
     "adminjs": "^5.7.3",
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.3.0",
     "connect-session-sequelize": "^7.1.2",
     "cors": "^2.8.5",
@@ -39,6 +47,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "npm-run-all": "^4.1.5",
+    "parcel": "^2.3.2",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
