--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@adminjs/sequelize": "^2.1.4",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.36.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/cors": "^2.8.12",
     "adminjs": "^5.7.3",
@@ -54,9 +55,7 @@
     "sequelize-cli": "^6.4.1",
     "shx": "^0.3.4",
     "winston": "^3.6.0",
-    "yarn": "^1.22.17"
-  },
-  "devDependencies": {
+    "yarn": "^1.22.17",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.2"
