--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "parcel": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "shx": "^0.3.4",
     "typescript": "^4.1.2",
