--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.23",
     "adminjs": "^5.7.3",
     "bcrypt": "^5.0.1",
     "concurrently": "^6.3.0",
@@ -46,7 +48,9 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.3.2",
     "path": "^0.12.7",
@@ -54,10 +58,8 @@
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1",
     "shx": "^0.3.4",
+    "typescript": "^4.6.2",
     "winston": "^3.6.0",
-    "yarn": "^1.22.17",
-    "@types/express": "^4.17.13",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.2"
+    "yarn": "^1.22.17"
   }
 }
