--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   "dependencies": {
     "@adminjs/express": "^4.1.0",
     "@adminjs/sequelize": "^2.1.4",
+    "@project-serum/anchor": "^0.25.0",
     "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.36.0",
+    "@solana/web3.js": "^1.50.1",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/cors": "^2.8.12",
